--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,5 @@
 name: Playwright Tests
 
-# Trigger the workflow on push or pull request to main branch
 on:
   push:
     branches: [ main ]
@@ -12,31 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repo
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Step 2: Setup Node.js
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # Step 3: Install project dependencies
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Install Playwright browsers
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      # Step 5: Run Playwright tests
       - name: Run Playwright tests
         run: npx playwright test --reporter=html
 
-      # Step 6: Upload Playwright HTML report as artifact
       - name: Upload Playwright report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 90
